# shindensen_ui

./: Cargo.toml
resources/: dialog.md
src/: app.rs  autho.rs  dialog.rs  dialog_list.rs  layout.rs  lib.rs  main.rs  new_chat.rs  shindensen_client.rs  state.rs  ui.rs
