[package]
name = "shindensen_ui"
version = "0.1.0"
edition = "2024"

[dependencies]
makepad-widgets = { git = "https://github.com/makepad/makepad.git", branch = "dev" }
makepad-code-editor = { git = "https://github.com/makepad/makepad.git", branch = "dev" }
makepad-micro-serde = { git = "https://github.com/makepad/makepad.git", branch = "dev" }
makepad-ai = { git = "https://github.com/makepad/makepad.git", branch = "dev", optional = true }
